[package]
name = "bean-script"
version = "0.2.3"
authors = ["mageowl"]
description = "Simple scripting language for easy use in other projects."
readme = "README.md"
homepage = "https://mageowlstudios.com/bean-script"
repository = "https://github.com/mageowl/bean-script"
license = "MIT"
keywords = ["language"]
categories = ["parser-implementations"]
edition = "2021"

[[bin]]
name = "beans"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rustyline = "14.0.0"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"
